force-app/main/default/objects/PWChrono_Promotion_Detail__c/PWChrono_Promotion_Detail__c.object-meta.xml
<CustomObject>
    <label>Promotion Detail</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Promotion Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>