force-app/main/default/objects/PWChrono_Promotion_Detail__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <referenceTo>PWChrono_Employee_Promotion__c</referenceTo>
    <relationshipLabel>Promotion Details</relationshipLabel>
    <relationshipName>Promotion_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>