force-app/main/default/objects/PWChrono_Promotion_Detail__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>